@@ -5,13 +5,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.StatDto;
 import ru.practicum.ViewStats;
+import ru.practicum.error.exceptions.ValidationException;
 import ru.practicum.mapper.StatMapper;
 import ru.practicum.model.Stat;
 import ru.practicum.repository.StatsRepository;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +31,10 @@ public class StatsServiceImpl implements StatsService {
 
     @Override
     public List<ViewStats> getAllStats(LocalDateTime start, LocalDateTime end, List<String> uris, boolean unique) {
+        if (start.isAfter(end)) {
+            throw new ValidationException("Start date must be before end date");
+        }
+
         List<Object[]> stats;
         if (uris != null && !uris.isEmpty()) {
             if (unique) {
@@ -52,6 +56,6 @@ public class StatsServiceImpl implements StatsService {
                         (String) obj[1],       // uri
                         ((Number) obj[2]).longValue() // hits
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
